@@ -5,5 +5,6 @@
 *.srec
 
 ev3ninja
+ev3ninja.asm
 boot.scr
 boot.cmd
