@@ -14,4 +14,4 @@ int putchar(int c);
 
 int puts(const char *s);
 
-
+int printf(const char *format, ...);
