@@ -1,0 +1,8 @@
+
+#include <stdio.h>
+
+int
+printf (__attribute__((unused)) const char* format, ...)
+{
+  return 0;
+}
